# TappyPotatoCpp

./: .gitignore  CMakeLists.txt  Engine.cpp  EventSystem.cpp  EventSystem.hpp  Exceptions.hpp  VideoSystem.cpp  VideoSystem.hpp  build_run.cmd  main.cpp  todo.txt
android-project/: build.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/images/: ground.uv  potato_alive.uv  potato_dead_eye.uv
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml
assets/images/: hayforks.uv  potato_alive.uv
ios-project/: .gitignore  Info.plist
ios-project/TappyPotato.xcodeproj/: project.pbxproj
ios-project/xcode/: Info.plist  main.c
ios-project/xcode/TappyPotato.xcodeproj/: project.pbxproj
ios-project/xcode/TappyPotato.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-project/xcode/TappyPotato.xcodeproj/xcshareddata/xcschemes/: ___PROJECTNAME___.xcscheme
ios-project/xcode/___PROJECTNAME___.xcodeproj/: project.pbxproj
src/: AudioSystem.cpp  AudioSystem.hpp  Constants.hpp  Engine.cpp  Engine.hpp  EventSystem.cpp  EventSystem.hpp  Game.cpp  Game.hpp  Image.cpp  Image.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  TextRenderer.cpp  TextRenderer.hpp  Timer.hpp  Utils.cpp  Utils.hpp  Vector.hpp  VideoSystem.cpp  VideoSystem.hpp  main.cpp
vs2019/: TappyPotatoCpp.sln  TappyPotatoCpp.vcxproj
